--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@graphql-tools/merge": "^9.0.4",
+    "@graphql-tools/schema": "^10.0.4",
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "graphql": "^16.9.0",
     "express-graphql": "^0.12.0",
-    "nodemailer": "^6.9.14",
+    "graphql": "^16.9.0",
+    "graphql-tag": "^2.12.6",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
