--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/merge": "^9.0.4",
     "aws-sdk": "^2.1659.0",
     "concurrently": "^8.2.2",
     "graphql-upload": "^16.0.2",
