--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@apollo/subgraph": "^2.8.3",
     "@graphql-tools/merge": "^9.0.4",
     "@graphql-tools/schema": "^10.0.4",
+    "aws-sdk": "^2.1659.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,6 +25,7 @@
     "http": "^0.0.1-security",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.14",
