--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "emailjs": "^4.0.3",
     "formik": "^2.4.6",
+    "graphql-tag": "^2.12.6",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
